UIUX-2154-branch locator branch list alignment issue

--- a/src/components/Pages/BranchLocator/BranchLocator.css
+++ b/src/components/Pages/BranchLocator/BranchLocator.css
@@ -151,6 +151,7 @@
 
 .locationInfo {
   max-width: 320px;
+  min-width: 320px;
   margin-bottom: 2% !important;
   display: flex;
   flex-direction: column;
@@ -857,6 +858,15 @@
 .webImage{
   max-width: 88%;
 }
+#getDrivingButton{
+  font-size: 0.938rem;
+  font-family: "Muli", sans-serif !important;
+  font-weight: 400;
+  padding: 0px 15px;
+  width: 100%;
+  height: 47px;
+  white-space: unset !important;
+}
 @media only screen and (max-width: 1200px) {
   .staticTextWrap {
     margin: 10px 30px 20px 30px;
@@ -1011,6 +1021,9 @@
 }
 
 @media (max-width: 599px) {
+  .locationInfo{
+    max-width: unset;
+  }
   .boxDiv {
     padding: 10px 10px;
   }
